# 添加一个头文件搜索路径可以找到hello.h
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/libs)
#message(${PROJECT_SOURCE_DIR})

# 链接库地址
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/dir)

# 生成可执行文件
ADD_EXECUTABLE(MQTT_PUBLISH MQTT_PUBLISH.cpp)
ADD_EXECUTABLE(MQTT_SUBSCRIBE MQTT_SUBSCRIBE.cpp)

# link 可执行文件和动态库
TARGET_LINK_LIBRARIES(MQTT_PUBLISH paho-mqtt3c)
TARGET_LINK_LIBRARIES(MQTT_SUBSCRIBE paho-mqtt3c)

#message(STATUS ${CMAKE_INCLUDE_PATH})
